--- a/PinchTestApp/TestApp/TestApp/MainPage.xaml
+++ b/PinchTestApp/TestApp/TestApp/MainPage.xaml
@@ -12,7 +12,7 @@
 				HorizontalOptions="FillAndExpand"
 				MaximumZoomScale="5"
 				MinimumZoomScale="1"
-				Orientation="Horizontal"
+				Orientation="Both"
 				VerticalOptions="FillAndExpand">
 				<StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
 					<views:SKCanvasView
@@ -31,7 +31,7 @@
 				InputTransparent="True"
 				MaximumZoomScale="5"
 				MinimumZoomScale="1"
-				Orientation="Horizontal"
+				Orientation="Both"
 				VerticalOptions="FillAndExpand">
 				<StackLayout
 					HorizontalOptions="FillAndExpand"
